--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -13,40 +13,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-09 Sat 15:26]
+#+CAPTION: Clock summary at [2019-03-09 Sat 17:02]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *81:24* |       |       | 100.0 |
+| *Total time*                                                 | *82:15* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 81:24   |       |       | 100.0 |
-| Active                                                       |         | 81:24 |       | 100.0 |
+| Stories                                                      | 82:15   |       |       | 100.0 |
+| Active                                                       |         | 82:15 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   1.8 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   1.9 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   4.6 |
-| Move generation model out of coding                          |         |       |  4:22 |   5.4 |
+| Move generation model out of coding                          |         |       |  4:22 |   5.3 |
 | Rename endomodel to just model                               |         |       |  2:11 |   2.7 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.2 |
 | Split annotations processing into two phases                 |         |       |  3:10 |   3.9 |
-| Move injection processing out of coding                      |         |       | 18:39 |  22.9 |
+| Move injection processing out of coding                      |         |       | 18:39 |  22.7 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.1 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.7 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.1 |
 | Add DTL to vcpkg                                             |         |       |  5:15 |   6.4 |
-| Remove coding options                                        |         |       |  3:59 |   4.9 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  14.8 |
+| Remove coding options                                        |         |       |  3:59 |   4.8 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  14.6 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.2 |
 | Logging impact in tracing is blank                           |         |       |  0:50 |   1.0 |
 | Split operation reports from patches                         |         |       |  1:19 |   1.6 |
 | Add org mode support to diff reports                         |         |       |  1:13 |   1.5 |
-| Add dry mode                                                 |         |       |  0:27 |   0.6 |
+| Add dry mode                                                 |         |       |  0:27 |   0.5 |
 | Split extraction model generation from code generation       |         |       |  0:29 |   0.6 |
+| Rework the system tests using diff mode                      |         |       | 14:34 |  17.7 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.4 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.3 |
 | Update metrics in OpenHub                                    |         |       |  0:18 |   0.4 |
-| Rework the system tests using diff mode                      |         |       | 13:43 |  16.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -913,6 +913,64 @@ change dogen to update the extension itself. We need some hackery in
 CMake to process extensions properly like by dropping the last N
 characters of the filename or some such.
 
+*** COMPLETED Rework the system tests using diff mode                 :story:
+    CLOSED: [2019-03-09 Sat 17:02]
+    :LOGBOOK:
+    CLOCK: [2019-03-09 Sat 16:11]--[2019-03-09 Sat 17:02] =>  0:51
+    CLOCK: [2019-03-09 Sat 14:23]--[2019-03-09 Sat 15:26] =>  1:03
+    CLOCK: [2019-03-09 Sat 07:40]--[2019-03-09 Sat 08:19] =>  0:39
+    CLOCK: [2019-03-09 Sat 07:24]--[2019-03-09 Sat 07:39] =>  0:15
+    CLOCK: [2019-03-09 Sat 07:15]--[2019-03-09 Sat 07:23] =>  0:08
+    CLOCK: [2019-03-09 Sat 06:06]--[2019-03-09 Sat 07:14] =>  1:08
+    CLOCK: [2019-03-08 Fri 19:14]--[2019-03-08 Fri 20:19] =>  1:05
+    CLOCK: [2019-03-08 Fri 17:52]--[2019-03-08 Fri 18:41] =>  0:49
+    CLOCK: [2019-03-08 Fri 17:22]--[2019-03-08 Fri 17:51] =>  0:29
+    CLOCK: [2019-03-08 Fri 15:03]--[2019-03-08 Fri 17:02] =>  1:59
+    CLOCK: [2019-03-08 Fri 13:09]--[2019-03-08 Fri 15:02] =>  1:53
+    CLOCK: [2019-03-08 Fri 12:43]--[2019-03-08 Fri 12:48] =>  0:05
+    CLOCK: [2019-03-08 Fri 09:27]--[2019-03-08 Fri 11:39] =>  2:12
+    CLOCK: [2019-03-08 Fri 08:35]--[2019-03-08 Fri 09:26] =>  0:51
+    CLOCK: [2019-03-08 Fri 06:13]--[2019-03-08 Fri 07:20] =>  1:07
+    :END:
+
+Once we have diff mode, we need to find some kind of workflow for
+tests:
+
+- each product is composed of a git URL and a list of models.
+- we git clone all repos as part of the build process.
+- directories and model locations are hard-coded in each test.
+- test runs against the model and hard-coded location, produces the
+  diff. Test asserts of the diff being non-zero.
+
+The problem with this approach is that we now have to do git checkouts
+of external projects in order to build and run the product. This is
+not ideal. Another approach is:
+
+- for the models of dogen itself, discover the models.
+- for external models, use environment variables. For the reference
+  models, if not defined then error. This is because the code
+  generator should not break the reference models.
+- for other project models, these can be ignored if not defined. This
+  is so we don't have to get all external projects when developing
+  locally, but the build machine will still validate them.
+
+Notes:
+
+- create a new test data set for each procuct (dogen, ref models).
+- test data set looks for an env variable. If not defined, throws.
+- test data set has hard-coded paths to each model, and to their
+  output.
+- test runs main orchestration transform against model then checks for
+  no writes or removes. prints out first 5 diffs to console.
+- enable diffing, reporting.
+- check how byproduct directory works with tests.
+- we cannot force all users to run system tests against reference
+  models. This basically would mean that if you want to use dogen from
+  git you'd have to also download reference models etc. We need to
+  hide this behind a feature switch.
+- we must now remember to always keep JSON models up to date or tests
+  will fail. This is probably a good thing.
+
 *** STARTED Rename the =transform= method to =apply=                  :story:
     :LOGBOOK:
     CLOCK: [2019-03-04 Mon 18:25]--[2019-03-04 Mon 18:30] =>  0:05
@@ -984,62 +1042,6 @@ bit silly yo have to have two flags for this.
 
 For some reason our metrics are stuck at 5 months ago or so. It is
 actually mildly useful to know the number of lines of code etc.
-
-*** STARTED Rework the system tests using diff mode                   :story:
-    :LOGBOOK:
-    CLOCK: [2019-03-09 Sat 14:23]--[2019-03-09 Sat 15:26] =>  1:03
-    CLOCK: [2019-03-09 Sat 07:40]--[2019-03-09 Sat 08:19] =>  0:39
-    CLOCK: [2019-03-09 Sat 07:24]--[2019-03-09 Sat 07:39] =>  0:15
-    CLOCK: [2019-03-09 Sat 07:15]--[2019-03-09 Sat 07:23] =>  0:08
-    CLOCK: [2019-03-09 Sat 06:06]--[2019-03-09 Sat 07:14] =>  1:08
-    CLOCK: [2019-03-08 Fri 19:14]--[2019-03-08 Fri 20:19] =>  1:05
-    CLOCK: [2019-03-08 Fri 17:52]--[2019-03-08 Fri 18:41] =>  0:49
-    CLOCK: [2019-03-08 Fri 17:22]--[2019-03-08 Fri 17:51] =>  0:29
-    CLOCK: [2019-03-08 Fri 15:03]--[2019-03-08 Fri 17:02] =>  1:59
-    CLOCK: [2019-03-08 Fri 13:09]--[2019-03-08 Fri 15:02] =>  1:53
-    CLOCK: [2019-03-08 Fri 12:43]--[2019-03-08 Fri 12:48] =>  0:05
-    CLOCK: [2019-03-08 Fri 09:27]--[2019-03-08 Fri 11:39] =>  2:12
-    CLOCK: [2019-03-08 Fri 08:35]--[2019-03-08 Fri 09:26] =>  0:51
-    CLOCK: [2019-03-08 Fri 06:13]--[2019-03-08 Fri 07:20] =>  1:07
-    :END:
-
-Once we have diff mode, we need to find some kind of workflow for
-tests:
-
-- each product is composed of a git URL and a list of models.
-- we git clone all repos as part of the build process.
-- directories and model locations are hard-coded in each test.
-- test runs against the model and hard-coded location, produces the
-  diff. Test asserts of the diff being non-zero.
-
-The problem with this approach is that we now have to do git checkouts
-of external projects in order to build and run the product. This is
-not ideal. Another approach is:
-
-- for the models of dogen itself, discover the models.
-- for external models, use environment variables. For the reference
-  models, if not defined then error. This is because the code
-  generator should not break the reference models.
-- for other project models, these can be ignored if not defined. This
-  is so we don't have to get all external projects when developing
-  locally, but the build machine will still validate them.
-
-Notes:
-
-- create a new test data set for each procuct (dogen, ref models).
-- test data set looks for an env variable. If not defined, throws.
-- test data set has hard-coded paths to each model, and to their
-  output.
-- test runs main orchestration transform against model then checks for
-  no writes or removes. prints out first 5 diffs to console.
-- enable diffing, reporting.
-- check how byproduct directory works with tests.
-- we cannot force all users to run system tests against reference
-  models. This basically would mean that if you want to use dogen from
-  git you'd have to also download reference models etc. We need to
-  hide this behind a feature switch.
-- we must now remember to always keep JSON models up to date or tests
-  will fail. This is probably a good thing.
 
 *** Consider adding tests for pipeline components                     :story:
 
