--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-09 Sat 17:02]
+#+CAPTION: Clock summary at [2019-03-10 Sun 07:48]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *82:15* |       |       | 100.0 |
+| *Total time*                                                 | *82:38* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 82:15   |       |       | 100.0 |
-| Active                                                       |         | 82:15 |       | 100.0 |
+| Stories                                                      | 82:38   |       |       | 100.0 |
+| Active                                                       |         | 82:38 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   1.8 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   1.9 |
-| Implement text model generation chain in generation          |         |       |  3:45 |   4.6 |
+| Implement text model generation chain in generation          |         |       |  3:45 |   4.5 |
 | Move generation model out of coding                          |         |       |  4:22 |   5.3 |
-| Rename endomodel to just model                               |         |       |  2:11 |   2.7 |
+| Rename endomodel to just model                               |         |       |  2:11 |   2.6 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.2 |
-| Split annotations processing into two phases                 |         |       |  3:10 |   3.9 |
-| Move injection processing out of coding                      |         |       | 18:39 |  22.7 |
+| Split annotations processing into two phases                 |         |       |  3:10 |   3.8 |
+| Move injection processing out of coding                      |         |       | 18:39 |  22.6 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.1 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.7 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.1 |
@@ -42,7 +42,7 @@
 | Add org mode support to diff reports                         |         |       |  1:13 |   1.5 |
 | Add dry mode                                                 |         |       |  0:27 |   0.5 |
 | Split extraction model generation from code generation       |         |       |  0:29 |   0.6 |
-| Rework the system tests using diff mode                      |         |       | 14:34 |  17.7 |
+| Rework the system tests using diff mode                      |         |       | 14:57 |  18.1 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.4 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.3 |
@@ -916,6 +916,7 @@ characters of the filename or some such.
 *** COMPLETED Rework the system tests using diff mode                 :story:
     CLOSED: [2019-03-09 Sat 17:02]
     :LOGBOOK:
+    CLOCK: [2019-03-10 Sun 07:25]--[2019-03-10 Sun 07:48] =>  0:23
     CLOCK: [2019-03-09 Sat 16:11]--[2019-03-09 Sat 17:02] =>  0:51
     CLOCK: [2019-03-09 Sat 14:23]--[2019-03-09 Sat 15:26] =>  1:03
     CLOCK: [2019-03-09 Sat 07:40]--[2019-03-09 Sat 08:19] =>  0:39
