--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,24 +14,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-18 Mon 10:44]
+#+CAPTION: Clock summary at [2019-03-18 Mon 10:56]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *45:24* |       |       | 100.0 |
+| *Total time*                                             | *45:35* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 45:24   |       |       | 100.0 |
-| Active                                                   |         | 45:24 |       | 100.0 |
+| Stories                                                  | 45:35   |       |       | 100.0 |
+| Active                                                   |         | 45:35 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   5.2 |
-| Sprint and product backlog grooming                      |         |       |  5:21 |  11.8 |
+| Sprint and product backlog grooming                      |         |       |  5:21 |  11.7 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   8.3 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.4 |
-| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.7 |
+| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.6 |
 | Add tests for tracing, reporting and diffing             |         |       |  5:46 |  12.7 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  14.2 |
-| Empty directories should be deleted                      |         |       |  5:37 |  12.4 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  14.1 |
+| Empty directories should be deleted                      |         |       |  5:37 |  12.3 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.5 |
-| Code generation of tests for dogen models                |         |       | 12:28 |  27.5 |
+| Code generation of tests for dogen models                |         |       | 12:39 |  27.8 |
 | Orchestration test is broken on Windows                  |         |       |  1:33 |   3.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -668,6 +668,7 @@ models.
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 10:45]--[2019-03-18 Mon 10:56] =>  0:11
     CLOCK: [2019-03-17 Sun 17:46]--[2019-03-17 Sun 18:04] =>  0:18
     CLOCK: [2019-03-17 Sun 17:02]--[2019-03-17 Sun 17:45] =>  0:43
     CLOCK: [2019-03-17 Sun 07:09]--[2019-03-17 Sun 07:25] =>  0:16
@@ -796,10 +797,11 @@ Notes:
 
 At present if we git clone a repo with UNIX line endings and then
 re-run dogen on Windows, even though nothing has changed in the model,
-all generated files will get rewritten with windows line endings. We
+all generated files should get rewritten with windows line endings. We
 should have a setting that enforces one set of line endings at the
 model level. Interestingly, at present almost all extraction and
-generation tests are green, implying we do not see any diffs.
+generation tests are green, implying we do not see any diffs. This is
+very puzzling.
 
 *** Simplify qualified name                                           :story:
 
