--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-18 Mon 10:56]
+#+CAPTION: Clock summary at [2019-03-18 Mon 13:05]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *45:35* |       |       | 100.0 |
+| *Total time*                                             | *47:22* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 45:35   |       |       | 100.0 |
-| Active                                                   |         | 45:35 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  2:22 |   5.2 |
-| Sprint and product backlog grooming                      |         |       |  5:21 |  11.7 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   8.3 |
+| Stories                                                  | 47:22   |       |       | 100.0 |
+| Active                                                   |         | 47:22 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  2:22 |   5.0 |
+| Sprint and product backlog grooming                      |         |       |  5:21 |  11.3 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   8.0 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.4 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.6 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  12.7 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  14.1 |
-| Empty directories should be deleted                      |         |       |  5:37 |  12.3 |
-| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.5 |
-| Code generation of tests for dogen models                |         |       | 12:39 |  27.8 |
-| Orchestration test is broken on Windows                  |         |       |  1:33 |   3.4 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  12.2 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  13.6 |
+| Empty directories should be deleted                      |         |       |  5:37 |  11.9 |
+| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.4 |
+| Code generation of tests for dogen models                |         |       | 13:57 |  29.5 |
+| Orchestration test is broken on Windows                  |         |       |  2:02 |   4.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -668,6 +668,9 @@ models.
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 13:00]--[2019-03-18 Mon 13:05] =>  0:05
+    CLOCK: [2019-03-18 Mon 12:28]--[2019-03-18 Mon 12:59] =>  0:31
+    CLOCK: [2019-03-18 Mon 11:26]--[2019-03-18 Mon 12:08] =>  0:42
     CLOCK: [2019-03-18 Mon 10:45]--[2019-03-18 Mon 10:56] =>  0:11
     CLOCK: [2019-03-17 Sun 17:46]--[2019-03-17 Sun 18:04] =>  0:18
     CLOCK: [2019-03-17 Sun 17:02]--[2019-03-17 Sun 17:45] =>  0:43
@@ -778,6 +781,7 @@ ignore the test regular expressions.
 
 *** STARTED Orchestration test is broken on Windows                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 10:56]--[2019-03-18 Mon 11:25] =>  0:29
     CLOCK: [2019-03-18 Mon 09:02]--[2019-03-18 Mon 10:35] =>  1:33
     :END:
 
