--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-18 Mon 13:45]
+#+CAPTION: Clock summary at [2019-03-18 Mon 14:44]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *48:00* |       |       | 100.0 |
+| *Total time*                                             | *48:59* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 48:00   |       |       | 100.0 |
-| Active                                                   |         | 48:00 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  2:22 |   4.9 |
-| Sprint and product backlog grooming                      |         |       |  5:21 |  11.1 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   7.9 |
+| Stories                                                  | 48:59   |       |       | 100.0 |
+| Active                                                   |         | 48:59 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  2:22 |   4.8 |
+| Sprint and product backlog grooming                      |         |       |  5:21 |  10.9 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   7.7 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
-| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.6 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  12.0 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  13.4 |
-| Empty directories should be deleted                      |         |       |  5:37 |  11.7 |
-| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.4 |
-| Orchestration test is broken on Windows                  |         |       |  2:40 |   5.6 |
-| Code generation of tests for dogen models                |         |       | 13:57 |  29.1 |
+| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.5 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  11.8 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  13.1 |
+| Empty directories should be deleted                      |         |       |  5:37 |  11.5 |
+| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.3 |
+| Orchestration test is broken on Windows                  |         |       |  2:40 |   5.4 |
+| Code generation of tests for dogen models                |         |       | 14:56 |  30.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -694,6 +694,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 13:44]--[2019-03-18 Mon 14:43] =>  0:59
     CLOCK: [2019-03-18 Mon 13:00]--[2019-03-18 Mon 13:05] =>  0:05
     CLOCK: [2019-03-18 Mon 12:28]--[2019-03-18 Mon 12:59] =>  0:31
     CLOCK: [2019-03-18 Mon 11:26]--[2019-03-18 Mon 12:08] =>  0:42
