--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-18 Mon 15:10]
+#+CAPTION: Clock summary at [2019-03-18 Mon 15:29]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *49:23* |       |       | 100.0 |
+| *Total time*                                             | *49:43* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 49:23   |       |       | 100.0 |
-| Active                                                   |         | 49:23 |       | 100.0 |
+| Stories                                                  | 49:43   |       |       | 100.0 |
+| Active                                                   |         | 49:43 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.8 |
 | Sprint and product backlog grooming                      |         |       |  5:21 |  10.8 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   7.7 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   7.6 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.5 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  11.7 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  13.0 |
-| Empty directories should be deleted                      |         |       |  5:37 |  11.4 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  11.6 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  12.9 |
+| Empty directories should be deleted                      |         |       |  5:37 |  11.3 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.3 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   5.4 |
-| Code generation of tests for dogen models                |         |       | 15:20 |  31.0 |
+| Code generation of tests for dogen models                |         |       | 15:40 |  31.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -694,6 +694,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 15:09]--[2019-03-18 Mon 15:29] =>  0:20
     CLOCK: [2019-03-18 Mon 14:44]--[2019-03-18 Mon 15:08] =>  0:24
     CLOCK: [2019-03-18 Mon 13:44]--[2019-03-18 Mon 14:43] =>  0:59
     CLOCK: [2019-03-18 Mon 13:00]--[2019-03-18 Mon 13:05] =>  0:05
