--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-18 Mon 15:29]
+#+CAPTION: Clock summary at [2019-03-18 Mon 15:32]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *49:43* |       |       | 100.0 |
+| *Total time*                                             | *49:45* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 49:43   |       |       | 100.0 |
-| Active                                                   |         | 49:43 |       | 100.0 |
+| Stories                                                  | 49:45   |       |       | 100.0 |
+| Active                                                   |         | 49:45 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.8 |
 | Sprint and product backlog grooming                      |         |       |  5:21 |  10.8 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   7.6 |
@@ -32,7 +32,7 @@
 | Empty directories should be deleted                      |         |       |  5:37 |  11.3 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.3 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   5.4 |
-| Code generation of tests for dogen models                |         |       | 15:40 |  31.5 |
+| Code generation of tests for dogen models                |         |       | 15:42 |  31.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -694,6 +694,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 15:30]--[2019-03-18 Mon 15:32] =>  0:02
     CLOCK: [2019-03-18 Mon 15:09]--[2019-03-18 Mon 15:29] =>  0:20
     CLOCK: [2019-03-18 Mon 14:44]--[2019-03-18 Mon 15:08] =>  0:24
     CLOCK: [2019-03-18 Mon 13:44]--[2019-03-18 Mon 14:43] =>  0:59
